# signalavergecg

./: .flake8  .gitignore  .pycodestyle  CHANGELOG.md  README.md  apply_mannwhitney_to_all.py  bump_version.py  calculate_band_power_ratio.py  calculate_band_power_ratio_2d.py  calculate_entropies.py  calculate_skew_kurtosis.py  compare_signals_mannwhitney.py  compute_detrended_fluctuation.py  compute_late_potentials_from_avg.py  find_max_frequency_time.py  findpeaks.py  iircombfilter.py  iqr_winsorize.py  peaksfind.py  periodogram_power.py  periodogram_power_max.py  phase_instability.py  plot_fixed_bin_histogram.py  plot_histogram.py  pyproject.toml  read_edf.py  remove_baseline_drift.py  rocauccurveml.py  saecg.ipynb  saecg.py  signaladd.py  signalavergedecg.py  time_slice.py  version.py  waveletscaleaogram.py
.github/: dependency-review.yml
.github/worflows/: flake8.yml  flake8autofixwin.yml
.github/workflows/: flake8autofix.yml
configfiles/: parametr.yml  parametrs.json
docs/: ~$Отчет.docx  ~WRL0005.tmp  ~WRL3056.tmp  ~WRL4037.tmp  Отчет.docx
result/txt/: results_10_norm.txt  results_11_norm.txt  results_11_pat.txt  results_13_norm.txt  results_14_norm.txt  results_15_pat.txt  results_1_10_pat.txt  results_1_11_norm.txt  results_1_12_norm.txt  results_1_12_pat.txt  results_1_13_norm.txt  results_1_13_pat.txt  results_1_14_pat.txt  results_1_15_norm.txt  results_1_16_norm.txt  results_1_16_pat.txt  results_1_17_norm.txt  results_1_17_pat.txt  results_1_18_norm.txt  results_1_18_pat.txt  results_2_10_norm.txt  results_2_10_pat.txt  results_2_11_pat.txt  results_2_12_norm.txt  results_2_12_pat.txt  results_2_13_norm.txt  results_2_13_pat.txt  results_2_14_norm.txt  results_2_14_pat.txt  results_2_15_pat.txt  results_2_16_norm.txt  results_2_16_pat.txt  results_2_17_norm.txt  results_2_17_pat.txt  results_2_18_norm.txt  results_2_18_pat.txt  results_ratio_cwt_power_1_10_norm.txt  results_ratio_cwt_power_1_10_pat.txt  (+28 more)
(+5 files in other folders)
