[project]
name = "signalavergecg"
version = "0.0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antropy>=0.2.2",
    "biosppy>=2.2.4",
    "edflib-python>=1.0.8",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "peakutils>=1.3.5",
    "pyentrp>=2.1.0",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
build = [
    "wheel>=0.46.3",
]
dev = [
    "flake8>=7.3.0",
    "poethepoet>=0.42.1",
    "pycodestyle>=2.14.0",
    "ruff>=0.15.4",
]
