[project]
name = "signalavergecg"
version = "0.0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   
    "biosppy",
    "edflib-python",
    "ipympl",
    "matplotlib",
    "notebook",
    "openpyxl",
    "pandas",
    "peakutils",
    "pyentrp",
    "pywavelets",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "tqdm",
    "xlsxwriter",
]

[dependency-groups]
build = [
    "wheel",
]
dev = [
    "flake8",
    "poethepoet",
    "pycodestyle",
    "ruff",
]
